--- a/meta/main.yml
+++ b/meta/main.yml
@@ -5,15 +5,22 @@ galaxy_info:
   license: Apache
   min_ansible_version: 2.8
   platforms:
-  - name: Ubuntu
-    versions:
-    - lucid
-    - precise
-    - trusty
-  - name: EL
-    versions:
-    - 7
+    - name: Debian
+      versions:
+        # 9
+        - etch
+        # 10
+        - buster
+    - name: Ubuntu
+      versions:
+        # 18.04
+        - bionic
+        # 20.04
+        - focal
+    - name: EL
+      versions:
+        - 8
   categories:
-  - system
+    - system
 
 dependencies: []
