--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -9,11 +9,13 @@
   template:
     src: logrotate.conf.j2
     dest: /etc/logrotate.conf
+    mode: 0644
 
 - name: create logrotate.d configs
   template:
     src: logrotate.d.j2
     dest: "{{ logrotate_conf_dir }}/{{ item.key }}"
+    mode: 0644
   loop:
     "{{ logrotate_scripts | dict2items }}"
   when:
@@ -36,7 +38,6 @@
     - name: handle systemd timer unit is stopped and disabled
       service:
         name: logrotate.timer
-        # state: "{{ systemd_state }}"
         enabled: "{{ systemd_enabled }}"
       ignore_errors: true
 
