--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,8 @@ jobs:
       - name: install dependencies.
         run: |
           sudo apt-get update
-          sudo apt-get install -y ansible ansible-lint yamllint flake8
+          sudo apt-get install -y python3-pip python3-setuptools
+          sudo pip3 install ansible ansible-lint yamllint flake8
 
       - name: Lint code.
         run: |
