change dot files

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,11 +41,12 @@ jobs:
           sudo apt-get install -y python3-pip python3-setuptools
           sudo pip3 install ansible ansible-lint yamllint flake8
 
-      - name: Lint code.
-        run: |
-          yamllint .
-          ansible-lint .
-          flake8 .
+      - name: YAMLlint
+        run: yamllint .
+      - name: ansible-lint
+        run: ansible-lint .
+      - name: flake8
+        run: flake8 .
 
   test:
     name: "${{ matrix.image }} / python: ${{ matrix.python-version }}, ansible: ${{ matrix.ansible-version }}"
