--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,8 +7,11 @@ on:
   # Trigger the workflow on push or pull request,
   # but only for the main branch
   pull_request:
-    branches:
-      - main
+    types:
+      - opened
+      - assigned
+      - synchronize
+      - reopened
   push:
     branches:
       - master
