--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y python3-pip python3-setuptools
-          sudo pip3 install ansible ansible-lint yamllint flake8
+          sudo pip3 install ansible ansible-lint yamllint flake8 PyYAML
 
       - name: YAMLlint
         run: |
