--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,9 +43,8 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y python3-pip python3-setuptools
           sudo pip3 install ansible ansible-lint yamllint flake8
-          sudo pip3 list --outdated
-          sudo pip3 list --outdated --format=freeze | grep -v '^\-e' | cut -d = -f 1 | xargs -n1 pip3 install -U
-
+          sudo pip3 list --outdated --format=columns
+          sudo pip3 install --upgrade PyYAML
 
       - name: YAMLlint
         run: |
