--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,5 +1,6 @@
 ---
 galaxy_info:
+  role_name: logrotate
   author: Bodo Schulz
   description: Role to configure logrotate scripts
   license: Apache
