--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,8 @@
 ---
 galaxy_info:
   role_name: logrotate
+  namespace: bodsch
+
   author: Bodo Schulz
   description: Role to configure logrotate scripts
   license: Apache
