--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -1,4 +1,4 @@
-
+---
 - name: prepare container
   hosts: all
   gather_facts: true
@@ -10,4 +10,4 @@
           - "distribution         : {{ ansible_distribution }}"
           - "distribution version : {{ ansible_distribution_major_version }}"
           - "ansible version      : {{ ansible_version.full }}"
-          - "python version       : {{ ansible_python.version.major }}"
+          - "python version       : {{ ansible_python.version.major }}.{{ ansible_python.version.minor }}"
