split github workflows
add more doku to default values
ensure that directories are created

--- a/molecule/default/group_vars/all/vars.yml
+++ b/molecule/default/group_vars/all/vars.yml
@@ -44,6 +44,14 @@ logrotate_scripts:
       postrotate: /bin/kill -USR1 $(cat /run/icinga2/icinga2.pid 2> /dev/null) 2> /dev/null || true
 
   nofunc:
+    options:
+      - daily
+
+  noexists:
+    description: |
+      this logrotate schould be absent
     state: absent
     options:
       - daily
+
+...
