--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,8 @@
 ---
-# https://docs.github.com/en/actions/reference/events-that-trigger-workflows
-
 name: CI
 
 on:
+  # https://docs.github.com/en/actions/reference/events-that-trigger-workflows
   # Trigger the workflow on push or pull request,
   # but only for the main branch
   pull_request:
@@ -16,7 +15,7 @@ on:
     branches:
       - master
   schedule:
-    - cron: "0 2 * * 0"
+    - cron: "10 2 * * 0"
 
 defaults:
   run:
@@ -42,7 +41,7 @@ jobs:
           # VALIDATE_MARKDOWN: trues
           VALIDATE_YAML: true
 
-  test:
+  arch_standard:
     name: "${{ matrix.image }} / python: ${{ matrix.python-version }}, ansible: ${{ matrix.ansible-version }}"
     needs:
       - lint
@@ -51,14 +50,8 @@ jobs:
       fail-fast: false
       matrix:
         image:
-          - debian:9
-          - debian:10
-          - ubuntu:18.04
-          - ubuntu:20.04
-          - centos:8
-          - oraclelinux:8
+          - archlinux:latest
         python-version:
-          - '3.7'
           - '3.8'
           - '3.9'
         ansible-version:
@@ -81,10 +74,100 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r test-requirements.txt
 
-      - name: test with tox
+      - name: test default
         run: |
-          tox -e py$(printf "${{ matrix.python-version }}" | tr -d '.')-ansible$(printf "${{ matrix.ansible-version }}" | tr -d '.') \
-            -- molecule test
+          tox -e py$(printf "${{ matrix.python-version }}" | tr -d '.')-ansible$(printf "${{ matrix.ansible-version }}" | tr -d '.') -- \
+            molecule test
+        env:
+          PY_COLORS: '1'
+          ANSIBLE_FORCE_COLOR: '1'
+          DISTRIBUTION: ${{ matrix.image }}
+
+  deb_standard:
+    name: "${{ matrix.image }} / python: ${{ matrix.python-version }}, ansible: ${{ matrix.ansible-version }}"
+    needs:
+      - lint
+    runs-on: ubuntu-18.04
+    strategy:
+      fail-fast: false
+      matrix:
+        image:
+          - debian:9
+          - debian:10
+          - ubuntu:18.04
+          - ubuntu:20.04
+        python-version:
+          - '3.8'
+          - '3.9'
+        ansible-version:
+          - '2.9'
+          - '2.10'
+
+    steps:
+      - name: check out the codebase.
+        uses: actions/checkout@v2
+        with:
+          path: 'ansible-logrotate'
+
+      - name: set up python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r test-requirements.txt
+
+      - name: test default
+        run: |
+          tox -e py$(printf "${{ matrix.python-version }}" | tr -d '.')-ansible$(printf "${{ matrix.ansible-version }}" | tr -d '.') -- \
+            molecule test
+        env:
+          PY_COLORS: '1'
+          ANSIBLE_FORCE_COLOR: '1'
+          DISTRIBUTION: ${{ matrix.image }}
+
+  rpm_standard:
+    name: "${{ matrix.image }} / python: ${{ matrix.python-version }}, ansible: ${{ matrix.ansible-version }}"
+    needs:
+      - lint
+    runs-on: ubuntu-18.04
+    strategy:
+      fail-fast: false
+      matrix:
+        image:
+          - centos:7
+          - centos:8
+          - oraclelinux:7
+          - oraclelinux:8
+        python-version:
+          - '3.8'
+          - '3.9'
+        ansible-version:
+          - '2.9'
+          - '2.10'
+
+    steps:
+      - name: check out the codebase.
+        uses: actions/checkout@v2
+        with:
+          path: 'ansible-logrotate'
+
+      - name: set up python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r test-requirements.txt
+
+      - name: test default
+        run: |
+          tox -e py$(printf "${{ matrix.python-version }}" | tr -d '.')-ansible$(printf "${{ matrix.ansible-version }}" | tr -d '.') -- \
+            molecule test
         env:
           PY_COLORS: '1'
           ANSIBLE_FORCE_COLOR: '1'
@@ -93,7 +176,9 @@ jobs:
   publish:
     if: github.ref == 'refs/heads/master'
     needs:
-      - test
+      - arch_standard
+      - deb_standard
+      - rpm_standard
     runs-on: ubuntu-18.04
     steps:
       - name: galaxy
