--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,4 +1,5 @@
 ---
+
 galaxy_info:
   role_name: logrotate
   namespace: bodsch
@@ -8,22 +9,30 @@ galaxy_info:
   license: Apache
   min_ansible_version: 2.8
   platforms:
+    - name: Ubuntu
+      versions:
+        # 16.04
+        - cosmic
+        # 18.04
+        - bionic
+        # 20.04
+        - focal
     - name: Debian
       versions:
         # 9
         - etch
         # 10
         - buster
-    - name: Ubuntu
-      versions:
-        # 18.04
-        - bionic
-        # 20.04
-        - focal
     - name: EL
       versions:
+        - 7
         - 8
+    - name: ArchLinux
   galaxy_tags:
     - system
+    - logfile
+    - rotate
 
 dependencies: []
+
+...
