--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,7 +41,7 @@ jobs:
           # VALIDATE_MARKDOWN: trues
           VALIDATE_YAML: true
 
-  arch_standard:
+  arch:
     name: "${{ matrix.image }} / python: ${{ matrix.python-version }}, ansible: ${{ matrix.ansible-version }}"
     needs:
       - lint
@@ -52,10 +52,8 @@ jobs:
         image:
           - archlinux:latest
         python-version:
-          - '3.8'
           - '3.9'
         ansible-version:
-          - '2.9'
           - '2.10'
 
     steps:
@@ -83,7 +81,7 @@ jobs:
           ANSIBLE_FORCE_COLOR: '1'
           DISTRIBUTION: ${{ matrix.image }}
 
-  deb_standard:
+  deb:
     name: "${{ matrix.image }} / python: ${{ matrix.python-version }}, ansible: ${{ matrix.ansible-version }}"
     needs:
       - lint
@@ -94,13 +92,12 @@ jobs:
         image:
           - debian:9
           - debian:10
+          - debian:11
           - ubuntu:18.04
           - ubuntu:20.04
         python-version:
-          - '3.8'
           - '3.9'
         ansible-version:
-          - '2.9'
           - '2.10'
 
     steps:
@@ -128,7 +125,7 @@ jobs:
           ANSIBLE_FORCE_COLOR: '1'
           DISTRIBUTION: ${{ matrix.image }}
 
-  rpm_standard:
+  rpm:
     name: "${{ matrix.image }} / python: ${{ matrix.python-version }}, ansible: ${{ matrix.ansible-version }}"
     needs:
       - lint
@@ -142,10 +139,8 @@ jobs:
           - oraclelinux:7
           - oraclelinux:8
         python-version:
-          - '3.8'
           - '3.9'
         ansible-version:
-          - '2.9'
           - '2.10'
 
     steps:
@@ -176,9 +171,9 @@ jobs:
   publish:
     if: github.ref == 'refs/heads/master'
     needs:
-      - arch_standard
-      - deb_standard
-      - rpm_standard
+      - arch
+      - deb
+      - rpm
     runs-on: ubuntu-18.04
     steps:
       - name: galaxy
