--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,3 +1,4 @@
+# Standards: 1.2
 ---
 
 galaxy_info:
@@ -7,12 +8,10 @@ galaxy_info:
   author: Bodo Schulz
   description: Role to configure logrotate scripts
   license: Apache
-  min_ansible_version: 2.8
+  min_ansible_version: 2.10
   platforms:
     - name: Ubuntu
       versions:
-        # 16.04
-        - cosmic
         # 18.04
         - bionic
         # 20.04
@@ -23,6 +22,8 @@ galaxy_info:
         - etch
         # 10
         - buster
+        # 11
+        - bullseye
     - name: EL
       versions:
         - 7
