--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 minversion = 1.8
 
-envlist = py{37,38,39}-ansible{29,210}
+envlist = py{39,310}-ansible{29,210}
 
 skipsdist = true
 
@@ -11,9 +11,8 @@ ansible =
   2.10: ansible210
 
 python =
-    3.7: py37
-    3.8: py38
     3.9: py39
+    3.10: py310
 
 [testenv]
 passenv = *
@@ -21,9 +20,12 @@ deps =
     -r test-requirements.txt
     ansible29: ansible>=2.9,<2.10
     ansible210: ansible>=2.10,<2.11
+    ansible340: ansible>=3.4,<3.5
+    ansible510: ansible>=5.1,<5.2
 
 commands_pre =
     /usr/bin/find {toxinidir} -type f -not -path '{toxinidir}/.tox/*' -path '*/__pycache__/*' -name '*.py[c|o]' -delete
+    /bin/sh -c '/usr/bin/find {homedir}/.cache -type d -path "*/molecule_*" -exec rm -rfv \{\} +;'
 
 commands =
     {posargs:molecule test --all --destroy always}
