--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,7 +54,8 @@ jobs:
         python-version:
           - '3.9'
         ansible-version:
-          - '2.10'
+          - '4.1.0'
+          - '5.1.0'
 
     steps:
       - name: check out the codebase.
@@ -98,7 +99,8 @@ jobs:
         python-version:
           - '3.9'
         ansible-version:
-          - '2.10'
+          - '4.1.0'
+          - '5.1.0'
 
     steps:
       - name: check out the codebase.
@@ -134,14 +136,14 @@ jobs:
       fail-fast: false
       matrix:
         image:
-          - centos:7
-          - centos:8
-          - oraclelinux:7
           - oraclelinux:8
+          - rockylinux:8
+          - almalinux:8
         python-version:
           - '3.9'
         ansible-version:
-          - '2.10'
+          - '4.1.0'
+          - '5.1.0'
 
     steps:
       - name: check out the codebase.
@@ -177,6 +179,7 @@ jobs:
     runs-on: ubuntu-18.04
     steps:
       - name: galaxy
-        uses: robertdebock/galaxy-action@1.1.0
+        uses: robertdebock/galaxy-action@1.2.0
         with:
           galaxy_api_key: ${{ secrets.galaxy_api_key }}
+          git_branch: master
