--- a/tasks/configure.yaml
+++ b/tasks/configure.yaml
@@ -2,21 +2,21 @@
 
 - name: create logrotate.conf
   become: true
-  template:
+  ansible.builtin.template:
     src: logrotate.conf.j2
     dest: /etc/logrotate.conf
     mode: 0644
 
 - name: create directory {{ logrotate_conf_dir }}
   become: true
-  file:
+  ansible.builtin.file:
     path: "{{ logrotate_conf_dir }}"
     state: directory
     mode: 0755
 
 - name: create directory {{ logrotate_global.archive_directory }}
   become: true
-  file:
+  ansible.builtin.file:
     path: "{{ logrotate_global.archive_directory }}"
     state: directory
     mode: 0755
@@ -26,7 +26,7 @@
 
 - name: create logrotate.d configs
   become: true
-  template:
+  ansible.builtin.template:
     src: logrotate.d.j2
     dest: "{{ logrotate_conf_dir }}/{{ item.key }}"
     mode: 0644
@@ -41,7 +41,7 @@
 
 - name: remove logrotate.d configs
   become: true
-  file:
+  ansible.builtin.file:
     dest: "{{ logrotate_conf_dir }}/{{ item.key }}"
     state: absent
   loop:
