--- a/tasks/cron.yaml
+++ b/tasks/cron.yaml
@@ -1,13 +1,13 @@
 ---
 
 - name: ensure that /etc/cron.daily is present
-  file:
+  ansible.builtin.file:
     state: directory
     path: /etc/cron.daily
     mode: 0755
 
 - name: write cron.daily
-  template:
+  ansible.builtin.template:
     src: cron_logrotate.j2
     dest: /etc/cron.daily/logrotate
     mode: 0755
