--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,6 @@
 name: CI
 
 on:
-  schedule:
-    - cron: "10 2 * * 0"
-  workflow_dispatch:
   workflow_run:
     workflows:
       - "code linter"
@@ -31,7 +28,8 @@ jobs:
           - '5.10'
           - '6.7'
           - '7.0'
-
+        scenario:
+          - default
     steps:
       - name: check out the codebase.
         uses: actions/checkout@v3
@@ -50,8 +48,11 @@ jobs:
 
       - name: test default
         run: |
-          tox -e ansible_$(printf "${{ matrix.ansible-version }}") \
-            -- molecule test --scenario-name default
+          make \
+            test \
+            -e TOX_SCENARIO="${{ matrix.scenario }}" \
+            -e TOX_ANSIBLE="ansible_${{ matrix.ansible-version }}" \
+            -e DISTRIBUTION="${{ matrix.image }}"
         env:
           PY_COLORS: '1'
           ANSIBLE_FORCE_COLOR: '1'
@@ -72,7 +73,8 @@ jobs:
           - '5.10'
           - '6.7'
           - '7.0'
-
+        scenario:
+          - default
     steps:
       - name: check out the codebase.
         uses: actions/checkout@v3
@@ -91,8 +93,11 @@ jobs:
 
       - name: test default
         run: |
-          tox -e ansible_$(printf "${{ matrix.ansible-version }}") \
-            -- molecule test --scenario-name default
+          make \
+            test \
+            -e TOX_SCENARIO="${{ matrix.scenario }}" \
+            -e TOX_ANSIBLE="ansible_${{ matrix.ansible-version }}" \
+            -e DISTRIBUTION="${{ matrix.image }}"
         env:
           PY_COLORS: '1'
           ANSIBLE_FORCE_COLOR: '1'
@@ -113,7 +118,8 @@ jobs:
           - '5.10'
           - '6.7'
           - '7.0'
-
+        scenario:
+          - default
     steps:
       - name: check out the codebase.
         uses: actions/checkout@v3
@@ -132,8 +138,11 @@ jobs:
 
       - name: test default
         run: |
-          tox -e ansible_$(printf "${{ matrix.ansible-version }}") \
-            -- molecule test --scenario-name default
+          make \
+            test \
+            -e TOX_SCENARIO="${{ matrix.scenario }}" \
+            -e TOX_ANSIBLE="ansible_${{ matrix.ansible-version }}" \
+            -e DISTRIBUTION="${{ matrix.image }}"
         env:
           PY_COLORS: '1'
           ANSIBLE_FORCE_COLOR: '1'
