--- a/meta/main.yml
+++ b/meta/main.yml
@@ -8,7 +8,7 @@ galaxy_info:
   description: Role to configure logrotate scripts
 
   license: Apache
-  min_ansible_version: "2.10"
+  min_ansible_version: "2.9"
 
   platforms:
     - name: ArchLinux
@@ -18,13 +18,12 @@ galaxy_info:
         - buster
         # 11
         - bullseye
+        - bookworm
     - name: Ubuntu
       versions:
         # 20.04
         - focal
-    - name: EL
-      versions:
-        - "8"
+
   galaxy_tags:
     - system
     - logfile
